Added vocab pages 221 to 227

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 <script src='vocab/vocab-215.js'></script>
 <script src='vocab/vocab-217.js'></script>
 <script src='vocab/vocab-219.js'></script>
+<script src='vocab/vocab-221.js'></script>
+<script src='vocab/vocab-223.js'></script>
+<script src='vocab/vocab-225.js'></script>
+<script src='vocab/vocab-227.js'></script>
 <script src='vocab/vocab-sport.js'></script>
 <script src='vocab/vocab-environment.js'></script>
 
